--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -31,6 +31,8 @@
 
   
   <ItemGroup>
+    <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
+    <PackageReference Include="ReactiveUI.WPF" Version="20.1.1" />
     <PackageReference Include="telerik.ui.for.wpf.netcore.xaml" Version="2024.1.423" />
   </ItemGroup>
 
